# SiD2Re

./: .composo.yaml  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE.txt  README.md  poetry.toml  pyproject.toml  run_benchmarks.py  setup.cfg
benchmark_config_collection/benchmark_v2/: config_grid.yaml
benchmark_datasets_v1.0_230623/: README.md
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_10000_[1, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_10000_[1, 1]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_10000_[1, 1]_0.001/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_10000_[1, 1]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_10000_[2, 0]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[0, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[1, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[1, 1]_0/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[1, 1]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[1, 1]_0.1/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[2, 0]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[2, 0]_0.001/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_1000_[2, 0]_0.1/: cd.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[0, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[1, 0]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[1, 0]_0.1/: x.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[1, 1]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[1, 1]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[1, 1]_0.1/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[0, 4, 0, 0, 0, 0]_500_[2, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[0, 0]_0.1/: x.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[1, 0]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[1, 0]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[1, 1]_0/: x.csv  y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[1, 1]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[1, 1]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[2, 0]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[2, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_10000_[2, 0]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 0]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 0]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 0]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 1]_0/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 1]_0.001/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[1, 1]_0.1/: y.csv
benchmark_datasets_v1.0_230623/concept_10_multi_dim_tree_4_2/gradual_True_faulty_sensor_False_[2, 0, 0, 2, 0, 0]_1000_[2, 0]_0.001/: y.csv
dev_tools/ci/: merge.gitlab-ci.yml  push.gitlab-ci.yml  versioning.py
dev_tools/test/: profiling.py
dev_tools/tox_scripts/: profiling.py  run-notebook-lint.py  run-notebook-lint.sh
docs/Mathematic_Documentation/: Drift&Shift-Generator.tex  references.bib
docs/notebooks/: examples.ipynb  simple_pipeline.ipynb
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst
prof/: combined.prof
src/sid2re/: benchmarks.py  main.py  utils.py
tests/: test_distributions.py  test_stages.py
tests/integration/: test_generator.py
(+8846 files in other folders)
